fix Opera overflow bug; tidy up; tweak to fit touch-sceen
git-svn-id: svn://jade.int.vam.ac.uk:8081/vanda/apps/digitallabels/prototype@6812 0bc139f7-1146-0410-aef3-adc14cba848e

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 #header { background-color:#9a283f; color:#fff; font-style:italic; line-height:1.9em; text-align:center; }
 
-.carousel { clear:both; margin:0; overflow:hidden; position:relative; }
+.carousel { clear:both; margin:0; position:relative; }
 #txt { position:absolute; bottom:0; }
 .obj { border:1px solid #b5b5b5; display:inline-block; list-style-type:none; margin-right:30px; position:relative; vertical-align:bottom; }
 .img { bottom:51px; }
@@ -20,7 +20,6 @@
 .active>.case>img { max-height:222px; max-width:222px; }
 .active>.case>.thumbs { display:block; }
 .txt { background:#fff; margin:0 20px 0 0; padding:15px 20px; width:540px; }
-.txt .col { padding-top:-0.25em; }
 .title { border-bottom:1px solid #b5b5b5; margin:0 0 15px; }
 .data { font-size:0.8em; position:absolute; bottom:0; }
 .data>.pane { padding:0 40px 0 0; }
@@ -34,8 +33,8 @@
 .txt.home .edged.col, .txt.home .title { border-color:#fff; }
 .pop { display:none; bottom:56px; position:absolute; z-index:1; }
 .pop>.mask { display:none; }
-#txtpop { font-size:160%; padding:30px; width:800px; }
-#txtpop .row>.col { height:528px; }
+#txtpop { font-size:150%; padding:30px; width:800px; }
+#txtpop .row>.col { height:490px; }
 
 #mousetrap { height:100%; left:0; position:absolute; top:0; width:100%; z-index:1; }
 #mousetrap.mask { background:#292728; opacity:0.7; }
